--- a/TabloidMVC/appsettings.json
+++ b/TabloidMVC/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost\\SQLEXPRESS;database=TabloidMVC;integrated security=true;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=TabloidMVC;Trusted_Connection=True;TrustServerCertificate=true;"
   }
 }
